# smart-home

./: .gitignore  README.md
configs/: .vimrc  README.md  init_config.sh  init_install_basics.sh  init_install_database.sh  init_install_dbms.sh  init_install_ftpserver.sh  init_install_ide.sh  init_install_matlab_octave.sh  init_install_miniconda_1.sh  init_install_miniconda_2.sh  init_install_r.sh
configs/rtu/.vim/: vimrc
credit_card_bill_injector/: README.md  pyproject.toml
credit_card_bill_injector/models/: bill_analysis.py
credit_card_bill_injector/src/credit_card_bill_injector/: crew.py  main.py
credit_card_bill_injector/src/credit_card_bill_injector/config/: agents.yaml  tasks.yaml
credit_card_bill_injector/src/credit_card_bill_injector/tools/: postgresql_tools.py
hardware/rtu/configs/.vim/: vimrc
modules/ai/python/archive_program/: picamera_manager_a.py  picamera_manager_b.py
services/ai/python/: collect_image.py  test_camera.py
services/database/sql/: insert-offline.sql  set-db-schema.sql
services/jupyter-notebook/: hello-world.ipynb
services/jupyter-notebook/.ipynb_checkpoints/: hello-world-checkpoint.ipynb
services/jupyter-notebook/learning/: google_stock.csv  learning_pandas_1.ipynb  learning_pandas_2.ipynb  learning_pandas_3.ipynb
services/jupyter-notebook/training/: training_pandas.ipynb
services/web/htdocs/: demo.html
userscripts/sh/: start_pg_container.sh
userscripts/sql/: 100_create_card_table.sql  200_create_merchants.sql  300_create_card_transactions.sql
(+3 files in other folders)
