[project]
name = "credit_card_bill_injector"
version = "0.1.0"
description = "credit_card_bill_injector using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
credit_card_bill_injector = "credit_card_bill_injector.main:run"
run_crew = "credit_card_bill_injector.main:run"
train = "credit_card_bill_injector.main:train"
replay = "credit_card_bill_injector.main:replay"
test = "credit_card_bill_injector.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
